--- a/GitKeeper/Properties/launchSettings.json
+++ b/GitKeeper/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "ConsoleApp3": {
       "commandName": "Project",
-      "commandLineArgs": "D:\\workspace"
+      "commandLineArgs": "sync workspace"
     }
   }
 }
