--- a/GitKeeper/GitKeeper.csproj
+++ b/GitKeeper/GitKeeper.csproj
@@ -12,7 +12,7 @@
   <ItemGroup>
     <PackageReference Include="ConsoleAppFramework" Version="3.2.0" />
     <PackageReference Include="LibGit2Sharp.NativeBinaries" Version="2.0.312" />
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8">
+    <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="5.0.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
