--- a/GitKeeper/GitKeeper.csproj
+++ b/GitKeeper/GitKeeper.csproj
@@ -2,7 +2,27 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFrameworks>netcoreapp3.1;net50;net60</TargetFrameworks>
+    <Version>1.1.1</Version>
+    <AssemblyName>git-keeper</AssemblyName>
+
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>$(AssemblyName)</ToolCommandName>
+
+    <PackageId>$(AssemblyName)</PackageId>
+    <PackageVersion>$(Version)</PackageVersion>
+    <PackageOutputPath>./nupkg</PackageOutputPath>
+
+    <Authors>Igor Karatayev</Authors>
+    <Description>Git keeper command.</Description>
+    <Copyright>Igor Karatayev</Copyright>
+    <PackageTags>git;</PackageTags>
+<!--
+    <PackageProjectUrl>https://github.com/yatagarasu25/UE4AssistantCLI</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/yatagarasu25/UE4AssistantCLI</RepositoryUrl>
+ -->
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -10,13 +30,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ConsoleAppFramework" Version="3.2.0" />
-    <PackageReference Include="LibGit2Sharp.NativeBinaries" Version="2.0.312" />
-    <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="5.0.3">
+    <PackageReference Include="ConsoleAppFramework" Version="4.1.0" />
+    <PackageReference Include="LibGit2Sharp.NativeBinaries" Version="2.0.315" />
+    <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="6.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
